--- a/inventory-app/src/index.html
+++ b/inventory-app/src/index.html
@@ -2,26 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>ng-book: Inventory App</title>
+    <title>Inventory App</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="assets/images/favicon-32x32.png"
-      sizes="32x32"
-    />
-    <link rel="icon" href="assets/images/favicon.ico" />
+    
   </head>
   <body>
     <!-- Menu Bar -->
     <div class="ui menu">
       <div class="ui container">
-        <a href="#" class="header item">
-          <img class="logo" src="assets/images/ng-book-2-minibook.png" />
-          ng-book
-        </a>
         <div class="header item borderless">
           <h1 class="ui header">
             Angular Inventory App
